<resources>
    <string name="app_name">Finger Gesture</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="start">Start</string>
    <string name="main_icon">Main Icon</string>
    <string name="app_selection">App Selection:</string>
    <string name="app_choices">App choices</string>
    <string name="show_debug">Show Debug:</string>
    <string name="tell_me_to_switch_app">Tell me to switch app!</string>
    <string name="current_browsed_image">Current Browsed Image</string>
    <string name="mock_map">mock map</string>
</resources>